<resources>
    <string name="app_name">To-Do List: Tick &amp; Done</string>
    <string name="addButton" >+</string>
    <string name="task_name">Task Name:</string>
    <string name="select_date">Select Date</string>
    <string name="due_date_not_set">Due Date:</string>
    <string name="due_time_not_set">Due Time:</string>
    <string name="select_time">Select Time</string>
    <string name="save_task">Save Task</string>
    <string name="title_activity_add_task">add task activity</string>
    <string name="selected_date">Selected Date:</string>
    <string name="please_select_a_date">Please Select a date!</string>
    <string name="please_select_a_time">Please select a time!</string>
    <string name="please_select_a_valid_time">Please select a Valid time!</string>
    <string name="no_tasks_img">no tasks img</string>
    <string name="Reminder_tag">Remind me on:</string>
    <string name="selected_time_must_be_in_the_future">Selected time must be in the future!</string>
    <string-array name="reminder_times">
        <item>On Due Time</item>
        <item>10 Minutes Before</item>
        <item>30 Minutes Before</item>
        <item>1 Hour Before</item>
        <item>1 Day Before</item>
    </string-array>
</resources>